--- a/templates/home.html
+++ b/templates/home.html
@@ -70,7 +70,8 @@ Student Hub{% endblock %} {% block content %}
             <div class="mt-auto">
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-muted">
-                  <i class="fas fa-user me-1"></i>{{ project.user.full_name }}
+                  <i class="fas fa-user me-1"></i>{{ project.user.full_name if
+                  project.user else 'Unknown User' }}
                 </small>
                 <small class="text-muted">
                   <i class="fas fa-calendar me-1"></i>{{
@@ -147,7 +148,8 @@ Student Hub{% endblock %} {% block content %}
             <div class="mt-auto">
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-muted">
-                  <i class="fas fa-user me-1"></i>{{ blog.user.full_name }}
+                  <i class="fas fa-user me-1"></i>{{ blog.user.full_name if
+                  blog.user else 'Unknown User' }}
                 </small>
                 <small class="text-muted">
                   <i class="fas fa-calendar me-1"></i>{{
